@@ -69,23 +69,11 @@ Dist::Zilla::Plugin::CheckPrereqsIndexed = 0.019
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 Dist::Zilla::Plugin::CopyFilesFromRelease = 0
-; Dist::Zilla::PluginBundle::Git::VersionManager = 0    ; currently bundled with this distribution
+Dist::Zilla::PluginBundle::Git::VersionManager = 0.001  ; not the unversioned one from [@Author::ETHER] 0.129
 Dist::Zilla::Plugin::Run::AfterRelease = 0.038
 Dist::Zilla::Plugin::Git::Push = 0
 Dist::Zilla::Plugin::CheckIssues = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
-
-[Prereqs / for @Git::VersionManager]
--phase = runtime
--relationship = requires
-Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.004
-Dist::Zilla::Plugin::Git::NextVersion = 0
-; Dist::Zilla::Plugin::MetaProvides::Update = 0     ; currently bundled with this distribution
-Dist::Zilla::Plugin::CopyFilesFromRelease = 0
-Dist::Zilla::Plugin::Git::Commit = 2.020
-Dist::Zilla::Plugin::Git::Tag = 0
-Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.004
-Dist::Zilla::Plugin::NextRelease = 5.033
 
 ; these should all be injected by the plugins themselves; patches are pending.
 [Prereqs / dzil plugin bundle (indirect)]
@@ -208,11 +196,6 @@ file = share/profiles/github/profile.ini
 root = share/profiles/github
 prefix = share/profiles/default
 
-[FileFinder::Filter / skip_versionless_modules]
-finder = :InstallModules
-skip = lib/Dist/Zilla/PluginBundle/Git/VersionManager.pm
-skip = lib/Dist/Zilla/Plugin/MetaProvides/Update.pm
-
 [@Author::ETHER]
 ; FIXME: Module.pm in profiles/ does not have parsable pod nor resolvable URIs
 ; It should be ignorable -- these plugins should be updated so they use
@@ -227,8 +210,6 @@ Test::ReportPrereqs.include[0] = Dist::CheckConflicts
 Test::ReportPrereqs.include[1] = Pod::Elemental::PerlMunger
 ModuleBuildTiny.static = no ; [CheckBin]
 StaticInstall.mode = off    ; [CheckBin]
-RewriteVersion::Transitional.finder = skip_versionless_modules
-BumpVersionAfterRelease::Transitional.finder = skip_versionless_modules
 
 [Test::CheckBreaks]
 :version = 0.017
