@@ -5,6 +5,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-ETHER
           - fix inverted condition in [Git::Check] configuration (wrong since
             version 0.126)
           - fix airplane mode, broken since version 0.127
+          - [@Git::VersionManager] and [MetaProvides::Update] are moved off to
+            their own distribution, Dist-Zilla-PluginBundle-Git-VersionManager
 
 0.129     2017-08-21 04:45:42Z
           - fix a new test to avoid triggering the "looks like you're
